gcc/testsuite/rust/rustc/ui/parser/keyword-mut-as-identifier.rs
fn main() {
    let mut = "foo"; // { dg-error "" "" { target *-*-* } }
}

